--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -13,4 +13,7 @@ html
 		script(src='./js/bundle.js' defer)
 
 body
-	h1= hello
+	main.main
+		include sections/slide_1
+		include sections/slide_2
+		include sections/slide_3
