--- a/src/styles/layout/adjustment.scss
+++ b/src/styles/layout/adjustment.scss
@@ -1,4 +1,13 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Lato', 'Arial', sans-serif;
+  line-height: 1.5;
+  color: $font-white-color;
+}
+
+* {
+  box-sizing: border-box;
 }
