--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,5 +1,10 @@
 $font-white-color: #fff;
 $font-blue-color: #0d319c;
 
+$pagination-active-color: #f78b1f;
+$pagination-color: #fff;
+
 $target-bg: rgb(247, 139, 31);
 $target-border: #cf1437;
+
+$slider-control-color: #d1eaff;
