--- a/src/styles/layout/adjustment.scss
+++ b/src/styles/layout/adjustment.scss
@@ -1,8 +1,9 @@
-body {
+html,body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+  //overflow-x: hidden;
   font-family: 'Lato', 'Arial', sans-serif;
   line-height: 1.5;
   color: $font-white-color;
