--- a/src/styles/layout/section.scss
+++ b/src/styles/layout/section.scss
@@ -4,6 +4,13 @@
   background-size: 100% 100%;
   background-position: 50%;
   position: relative;
+  overflow: hidden;
+
+  &__parallax {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
 
   &__title {
     font-family: 'Gotham Pro', 'Arial', sans-serif;
@@ -12,6 +19,13 @@
     &_blue {
       color: $font-blue-color;
       line-height: 1.2;
+    }
+    &_light {
+      padding-top: 243px;
+      line-height: 1.2;
+      text-align: center;
+      font-family: 'Gotham Pro Light', 'Arial', sans-serif;
+      font-weight: 300;
     }
   }
 
