scroll page and slider dates

--- a/src/styles/layout/adjustment.scss
+++ b/src/styles/layout/adjustment.scss
@@ -12,3 +12,14 @@ html,body {
 * {
   box-sizing: border-box;
 }
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.main {
+  height: 100%;
+  transition: transform 1.5s;
+}
