--- a/src/template/blocks/slider.pug
+++ b/src/template/blocks/slider.pug
@@ -17,3 +17,8 @@
 		.slider__lines
 			.slider__line.slider__line_active
 			.slider__line
+
+		.slider__dates
+			.slider__date.slider__date_1988 1988
+			.slider__date.slider__date_2009 2009
+			.slider__date.slider__date_2016 2016
