--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -13,9 +13,10 @@ html
 		script(src='./js/bundle.js' defer)
 
 body
-	main.main
-		include sections/slide_1
-		include sections/slide_2
-		include sections/slide_3
+	.wrapper
+		main.main
+			include sections/slide_1
+			include sections/slide_2
+			include sections/slide_3
 
 	include blocks/pagination
