--- a/src/styles/blocks/pagination.scss
+++ b/src/styles/blocks/pagination.scss
@@ -14,6 +14,7 @@
     background-color: $pagination-color;
     border-radius: 50%;
     margin-bottom: 7px;
+    transition: background-color 1.5s;
 
     &.active {
       background-color: $pagination-active-color;
