--- a/src/styles/blocks/slider-control.scss
+++ b/src/styles/blocks/slider-control.scss
@@ -2,7 +2,7 @@
   &__control {
     @include align('X');
     width: 654px;
-    bottom: 80px;
+    bottom: 28px;
     z-index: 80;
   }
 
@@ -33,5 +33,13 @@
       width: 500px;
       z-index: 50;
     }
+  }
+
+  &__dates {
+    margin-top: 21px;
+    font-size: 20px;
+    font-family: 'Gotham Pro', 'Arial', sans-serif;
+    display: flex;
+    justify-content: space-between;
   }
 }
