--- a/src/styles/layout/section.scss
+++ b/src/styles/layout/section.scss
@@ -1,5 +1,6 @@
 .slide-section {
   height: 100vh;
+  min-width: 1024px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: 50%;
