--- a/src/styles/layout/adjustment.scss
+++ b/src/styles/layout/adjustment.scss
@@ -7,6 +7,7 @@ html,body {
   font-family: 'Lato', 'Arial', sans-serif;
   line-height: 1.5;
   color: $font-white-color;
+  background-color: $background-color;
 }
 
 * {
