--- a/src/template/blocks/slider.pug
+++ b/src/template/blocks/slider.pug
@@ -13,7 +13,8 @@
 			+slide(3, 'third')
 
 	.slider__control
-		.slider__switcher
+		.slider__switcher-container
+			.slider__switcher
 		.slider__lines
 			.slider__line.slider__line_active
 			.slider__line
