--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -7,7 +7,7 @@ html
 		meta(charset="utf-8")
 		meta(content="width=device-width, initial-scale=1" name="viewport")
 
-		title Onpoint
+		title Onpoint test
 
 		link(rel='stylesheet' href='./css/styles.css')
 		script(src='./js/bundle.js' defer)
